--- a/war/src/main/less/modules/tabs.less
+++ b/war/src/main/less/modules/tabs.less
@@ -1,27 +1,3 @@
-:root {
-  --tabs-background: #f4f4f4;
-  --tabs-item-background: transparent;
-  --tabs-item-foreground: var(--text-color);
-  --tabs-item-background--hover: rgba(0, 0, 0, 0.05);
-  --tabs-item-foreground--hover: var(--text-color);
-  --tabs-item-background--active: rgba(0, 0, 0, 0.1);
-  --tabs-item-foreground--active: var(--text-color);
-  --tabs-item-background--selected: white;
-  --tabs-item-foreground--selected: var(--link-color);
-
-  --tabs-border-radius: calc((10px + 2rem) / 2);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --tabs-background: rgb(26, 26, 28);
-    --tabs-item-background: transparent;
-    --tabs-item-background--hover: rgba(255, 255, 255, 0.05);
-    --tabs-item-background--active: rgba(255, 255, 255, 0.1);
-    --tabs-item-background--selected: rgba(255, 255, 255, 0.05);
-  }
-}
-
 .tabBarFrame {
   position: relative;
 }
